fix scrollbar

--- a/docs/css/news.css
+++ b/docs/css/news.css
@@ -1,5 +1,6 @@
 body {
     background-color: #4F5770;
+    min-width: 1200px;
 }
 
 h1, h2, h3, blockquote, p {
